<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@string/background_image_description" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:layout_marginTop="25dp">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main_big" />
        <TextView
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main_s" />

    </LinearLayout>

    <TableLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <TableRow
            android:paddingHorizontal="50dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:id="@+id/leftTop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/main_not_btn_style_left_top"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingVertical="20dp">
                <TextView
                    android:textSize="19sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/camera_main_lt"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_camera_intent"
                    android:contentDescription="@string/camera_image_description" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rightTop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/main_not_btn_style_right_top"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <TextView
                    android:textSize="19sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/video_main_rt"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_video_intent"
                    android:contentDescription="@string/video_image_description" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:paddingHorizontal="50dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/leftBottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/main_not_btn_style_left_bottom"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingVertical="20dp">

                <TextView
                    android:textSize="19sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/audio_main_lb"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_audio_intent"
                    android:contentDescription="@string/audio_image_description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rightBottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/main_not_btn_style_right_bottom"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"

                android:paddingVertical="20dp">

                <TextView
                    android:textSize="19sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/text_main_rb"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_text_intent"
                    android:contentDescription="@string/text_image_description" />

            </LinearLayout>
        </TableRow>

    </TableLayout>


</RelativeLayout>