<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_margin="7dp"
            android:padding="10dp"
            android:id="@+id/btnTextIntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/ic_text_open_btn"
            android:background="@drawable/button_style_text"
            android:contentDescription="@string/open_text_file_description" />

        <ImageButton
            android:layout_margin="7dp"
            android:layout_marginStart="7dp"
            android:padding="10dp"
            android:id="@+id/btnSaveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_text_save_btn"
            android:background="@drawable/button_style_text"
            android:contentDescription="@string/save_text_description" />

        <EditText
            android:minLines="25"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginHorizontal="10dp"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/edit_text_hint"
            android:gravity="top|start"
            android:layout_below="@+id/btnSaveText"
            android:inputType="textMultiLine"
            android:autofillHints="" />
    </RelativeLayout>

</ScrollView>